@startuml 

Interface ObservationStrategy <<Strategy>> {
    + start(state:Path): void
    + stop(): void
}

class EventDrivenStrategy <<ConcreteStrategy>> {
    + start(state:Path): void
    + stop(): void
    + observe(): void
}

class PeriodicStrategy <<ConcreteStrategy>> {
    + start(state:Path): void
    + stop(): void
}

class OManager <<Context>> {
    + setObservationStrategy(strategy:ObservationStrategy): void
    + start(): void
    + stop(): void
}

class CLI <<Client>> {
}


CLI -u-> OManager
CLI .right.> EventDrivenStrategy
CLI ..> PeriodicStrategy

ObservationStrategy <|.. EventDrivenStrategy
ObservationStrategy <|.. PeriodicStrategy

OManager o-right-> ObservationStrategy



@enduml